home location feature + preference page https://bugs.eclipse.org/bugs/show_bug.cgi?id=489628

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.registry/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.registry/plugin.xml
@@ -20,5 +20,12 @@
             restorable="true">
       </view>
    </extension>
+   
+   <extension
+      point = "org.eclipse.ui.preferencePages">
+      <page id="org.eclipse.dirigible.ide.registry.conf.HomeLocationPreferencePage"
+	   	class="org.eclipse.dirigible.ide.registry.conf.HomeLocationPreferencePage" name="Home Location">
+      </page>
+   </extension>
 
 </plugin>
