--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
@@ -172,6 +172,12 @@
 			<param-name>mailSender</param-name>
 			<param-value>built-in</param-value>
 		</init-param>
+		
+		<!-- Default Home Location -->
+		<init-param>
+			<param-name>homeLocation</param-name>
+			<param-value>services/ui/index.html</param-value>
+		</init-param>
 
 		<load-on-startup>2</load-on-startup>
 
