--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.core/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.core/plugin.xml
@@ -109,5 +109,15 @@
               load-on-startup="true">
         </servlet>
      </extension>
+     
+     <extension
+           id="RegistryHomeServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/ui/home"
+              class="org.eclipse.dirigible.runtime.registry.RegistryHomeServlet"
+              load-on-startup="true">
+        </servlet>
+     </extension>
         
 </plugin>
