--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.terminal/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.terminal/plugin.xml
@@ -12,10 +12,11 @@
       </view>
    </extension>
 
- <extension
+   <extension
       point = "org.eclipse.ui.preferencePages">
       <page id="org.eclipse.dirigible.ide.terminal.ui.TerminalPreferencePage"
-	   	class="org.eclipse.dirigible.ide.terminal.ui.TerminalPreferencePage" name="Terminal">
+	   	class="org.eclipse.dirigible.ide.terminal.ui.TerminalPreferencePage" name="Terminal View">
       </page>
    </extension>
+   
 </plugin>
