--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/launch.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/launch.ini
@@ -9,5 +9,6 @@ osgi.*=@null
 org.osgi.*=@null
 eclipse.*=@null
 
-osgi.parentClassloader=app
-osgi.contextClassLoaderParent=ccl
+osgi.parentClassloader=fwk
+osgi.contextClassLoaderParent=fwk
+org.osgi.framework.system.packages.extra=javax.websocket,javax.websocket.server
