--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.flow/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.flow/plugin.xml
@@ -227,4 +227,15 @@
               load-on-startup="false">
         </servlet>
      </extension>
+     
+     <extension
+           id="WebSocketServiceServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/service"
+              class="org.eclipse.dirigible.runtime.ws.WebSocketServiceServlet"
+              load-on-startup="true">
+        </servlet>
+     </extension>
+     
 </plugin>
