source for javascript files - for debug integration https://bugs.eclipse.org/bugs/show_bug.cgi?id=490562

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.javascript/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.javascript/plugin.xml
@@ -161,5 +161,15 @@
               class="org.eclipse.dirigible.runtime.filter.RegistrySecureRolesFilter">
         </filter>
      </extension>
-          
+     
+     <extension
+           id="JavaScriptSourceRegistryServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/js-src"
+              class="org.eclipse.dirigible.runtime.js.debug.JavaScriptSourceRegistryServlet"
+              load-on-startup="false">
+        </servlet>
+     </extension>
+
 </plugin>
