securing js-src servlet https://bugs.eclipse.org/bugs/show_bug.cgi?id=490562

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
@@ -278,6 +278,7 @@
 			<url-pattern>/services/index.html</url-pattern>
 			<url-pattern>/services/workspace</url-pattern>
 			<url-pattern>/services/ui/index.html#/workspace</url-pattern>
+			<url-pattern>/services/js-src/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Developer</role-name>
