--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
@@ -267,6 +267,7 @@
 			<web-resource-name>IDE Services</web-resource-name>
 			<url-pattern>/services/workspace</url-pattern>
 			<url-pattern>/services/ui/index.html#/workspace</url-pattern>
+			<url-pattern>/services/js-src/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Developer</role-name>
