log console views in the registry and the IDE https://bugs.eclipse.org/bugs/show_bug.cgi?id=490520

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.ui/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.ui/plugin.xml
@@ -29,10 +29,19 @@
       <view
             allowMultiple="false"
             category="org.eclipse.dirigible.ide.workspace.ui.category"
+            class="org.eclipse.dirigible.ide.workspace.ui.view.LogConsoleView"
+            icon="resources/icons/icon-logs.png"
+            id="org.eclipse.dirigible.ide.workspace.ui.view.LogConsoleView"
+            name="Log Console"
+            restorable="true">
+      </view>
+      <view
+            allowMultiple="false"
+            category="org.eclipse.dirigible.ide.workspace.ui.category"
             class="org.eclipse.dirigible.ide.workspace.ui.view.LogsView"
             icon="resources/icons/icon-logs.png"
             id="org.eclipse.dirigible.ide.workspace.ui.view.LogsView"
-            name="Log Viewer"
+            name="Log Files"
             restorable="true">
       </view>
       <view
