--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -88,6 +88,8 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.runtime.chrome.debugger@start,\
   org.eclipse.dirigible.runtime.core@start,\
   org.eclipse.dirigible.runtime.javascript@start,\
+  org.eclipse.dirigible.runtime.javascript.rhino@start,\
+  org.eclipse.dirigible.runtime.javascript.rhino.debugger@start,\
   org.eclipse.dirigible.runtime.wiki@start,\
   org.eclipse.dirigible.runtime.mobile@start,\
   org.eclipse.dirigible.runtime.command@start,\
