--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
@@ -188,6 +188,12 @@
 			<param-value>services/ui/index.html</param-value>
 		</init-param>
 		
+		<!-- Run the present Tests on the server start -->
+		<init-param>
+			<param-name>runTestsOnInit</param-name>
+			<param-value>false</param-value>
+		</init-param>
+		
 		<load-on-startup>2</load-on-startup>
 
 	</servlet>
