--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/saptrial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/saptrial/web.xml
@@ -174,6 +174,12 @@
 			<param-name>homeLocation</param-name>
 			<param-value>services/ui/index.html</param-value>
 		</init-param>
+		
+		<!-- Run the present Tests on the server start -->
+		<init-param>
+			<param-name>runTestsOnInit</param-name>
+			<param-value>false</param-value>
+		</init-param>
 
 		<load-on-startup>2</load-on-startup>
 
