repository provider type added

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/trial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/trial/web.xml
@@ -113,7 +113,7 @@
 		<!-- Default Repository Provider --> 
 		<init-param>
 			<param-name>repositoryProvider</param-name>
-			<param-value>org.eclipse.dirigible.repository.local.LocalRepositoryProvider</param-value>
+			<param-value>local</param-value>
 		</init-param>
 		
 		<!-- Mail Service Built-in --> 
