--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
@@ -42,6 +42,7 @@
 			<param-value>/@RUNTIME_URL@</param-value>
 		</init-param>
 		
+		<!-- The mapping of the Equinox OSGi "services" Servlet -->
 		<init-param>
 			<param-name>servicesUrl</param-name>
 			<param-value>/services</param-value>
@@ -128,8 +129,8 @@
 		<!-- Default Repository Provider --> 
 		<init-param>
 			<param-name>repositoryProvider</param-name>
-			 <param-value>org.eclipse.dirigible.repository.db.DBRepositoryProvider</param-value> 
-			 <!-- <param-value>org.eclipse.dirigible.repository.local.LocalRepositoryProvider</param-value> -->
+			 <param-value>db</param-value> 
+			 <!-- <param-value>local</param-value> -->
 		</init-param>
 		
 		<!-- Default Repository Provider Master (used for Initial Load or Reset)  
