--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/saptrial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/saptrial/web.xml
@@ -128,15 +128,15 @@
 		<!-- Default Repository Provider --> 
 		<init-param>
 			<param-name>repositoryProvider</param-name>
-			 <!-- <param-value>org.eclipse.dirigible.repository.db.DBRepositoryProvider</param-value> --> 
-			 <param-value>org.eclipse.dirigible.repository.local.LocalRepositoryProvider</param-value>
+			 <!-- <param-value>db</param-value> --> 
+			 <param-value>local</param-value>
 		</init-param>
 		
 		<!-- Default Repository Provider Master (used for Initial Load or Reset)  
 		<init-param>
 			<param-name>repositoryProviderMaster</param-name>
-			<param-value>org.eclipse.dirigible.repository.db.DBMasterRepositoryProvider</param-value>
-			<!- - <param-value>org.eclipse.dirigible.repository.db.GitMasterRepositoryProvider</param-value> - ->
+			<param-value>db</param-value>
+			<!- - <param-value>git</param-value> - ->
 		</init-param>
 		-->
 		
