--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
@@ -110,13 +110,13 @@
 		<!-- Default Repository Provider --> 
 		<init-param>
 			<param-name>repositoryProvider</param-name>
-			<param-value>org.eclipse.dirigible.repository.db.DBRepositoryProvider</param-value>
+			<param-value>db</param-value>
 		</init-param>
 		
 		<!-- Default Repository Provider Master (used for Initial Load or Reset) 
 		<init-param>
 			<param-name>repositoryProviderMaster</param-name>
-			<param-value>org.eclipse.dirigible.repository.git.GitMasterRepositoryProvider</param-value>
+			<param-value>git</param-value>
 		</init-param>
 		-->
 		
