--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/tomcat/web.xml
@@ -113,13 +113,13 @@
 		<!-- Default Repository Provider --> 
 		<init-param>
 			<param-name>repositoryProvider</param-name>
-			<param-value>org.eclipse.dirigible.repository.local.LocalRepositoryProvider</param-value>
+			<param-value>local</param-value>
 		</init-param>
 		
 		<!-- Default Repository Provider Master (used for Initial Load or Reset) 
 		<init-param>
 			<param-name>repositoryProviderMaster</param-name>
-			<param-value>org.eclipse.dirigible.repository.git.GitMasterRepositoryProvider</param-value>
+			<param-value>git</param-value>
 		</init-param>
 		-->
 		
