generation service for scripting services https://bugs.eclipse.org/bugs/show_bug.cgi?id=499046

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.js/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.js/plugin.xml
@@ -46,5 +46,15 @@
             defaultHandler="org.eclipse.dirigible.ide.template.ui.js.command.JavascriptServiceCommandHandler">
         </newMenuItem>
  	</extension>
+ 	
+ 	<extension
+           id="ScriptingGenerationServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/generate-scripting-service"
+              class="org.eclipse.dirigible.ide.template.ui.js.service.ScriptingGenerationServlet"
+              load-on-startup="false">
+        </servlet>
+     </extension>
 
 </plugin>
