--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/sap/web.xml
@@ -287,6 +287,7 @@
 			<url-pattern>/services/ui/index.html#/workspace</url-pattern>
 			<url-pattern>/services/js-src/*</url-pattern>
 			<url-pattern>/services/generate-data-structure</url-pattern>
+			<url-pattern>/services/generate-scripting-service</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Developer</role-name>
