Generation Service for Web Content https://bugs.eclipse.org/bugs/show_bug.cgi?id=499057

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/plugin.xml
@@ -113,4 +113,24 @@
         </newMenuItem>
  	</extension>
  	
+ 	<extension
+           id="WebContentGenerationServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/generate-web-content"
+              class="org.eclipse.dirigible.ide.template.ui.html.service.WebContentGenerationServlet"
+              load-on-startup="false">
+        </servlet>
+     </extension>
+     
+     <extension
+           id="WebContentEntityGenerationServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/generate-web-content-entity"
+              class="org.eclipse.dirigible.ide.template.ui.html.service.WebContentEntityGenerationServlet"
+              load-on-startup="false">
+        </servlet>
+     </extension>
+ 	
 </plugin>
