Generation Service for Web Content for Entity https://bugs.eclipse.org/bugs/show_bug.cgi?id=499058

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/tomcat/web.xml
@@ -281,6 +281,7 @@
 			<url-pattern>/services/generate-data-structure</url-pattern>
 			<url-pattern>/services/generate-scripting-service</url-pattern>
 			<url-pattern>/services/generate-web-content</url-pattern>
+			<url-pattern>/services/generate-web-content-entity</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Developer</role-name>
