--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/web/tomcat/web.xml
@@ -294,6 +294,8 @@
 			<url-pattern>/services/generate-scripting-service</url-pattern>
 			<url-pattern>/services/generate-web-content</url-pattern>
 			<url-pattern>/services/generate-web-content-entity</url-pattern>
+			<url-pattern>/debug</url-pattern>
+			<url-pattern>/debugsessions/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Developer</role-name>
@@ -314,6 +316,8 @@
 			<url-pattern>/services/data-export</url-pattern>
 			<url-pattern>/services/content-init</url-pattern>
 			<url-pattern>/services/reset</url-pattern>
+			<url-pattern>/log</url-pattern>
+			<url-pattern>/terminal</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Operator</role-name>
@@ -369,6 +373,7 @@
 			<url-pattern>/services/registry-sql</url-pattern>
 			<url-pattern>/services/registry-test</url-pattern>
 			<url-pattern>/services/registry-listener</url-pattern>
+			<url-pattern>/service/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Everyone</role-name>
