--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
@@ -56,7 +56,7 @@
 		<!-- Print logs in System output in addition to the standard logger. Workaround for some application servers -->
 		<init-param>
 			<param-name>logInSystemOutput</param-name>
-			<param-value>true</param-value>
+			<param-value>false</param-value>
 		</init-param>
 		
 		<!-- Type of the Default Database DataSource -->
@@ -81,6 +81,24 @@
 		<init-param>
 			<param-name>jndiMailService</param-name>
 			<param-value>java:comp/env/mail/SAPInternalNWCloudSession</param-value>
+		</init-param>
+		
+		<!-- JNDI key for the CMIS Service -->
+		<init-param>
+			<param-name>jndiCmisService</param-name>
+			<param-value>java:comp/env/EcmService</param-value>
+		</init-param>
+		
+		<!-- JNDI key for the CMIS Service - Name -->
+		<init-param>
+			<param-name>jndiCmisServiceName</param-name>
+			<param-value>cmis:dirigible</param-value>
+		</init-param>
+		
+		<!-- JNDI key for the CMIS Service - Key -->
+		<init-param>
+			<param-name>jndiCmisServiceKey</param-name>
+			<param-value>cmis:dirigible:key</param-value>
 		</init-param>
 		
 		<!-- Auto Commit property for JDBC connection --> 
@@ -248,6 +266,12 @@
   		<res-ref-name>mail/SAPInternalNWCloudSession</res-ref-name>
   	    <res-type>javax.mail.Session</res-type>
   	</resource-ref>
+  	
+  	<resource-ref>
+   		<res-ref-name>EcmService</res-ref-name>
+   		<res-type>com.sap.ecm.api.EcmService</res-type>
+	</resource-ref>
+  	
 	
 
 	<!-- Security -->
