--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/build.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.html/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 bin.includes = META-INF/,\
                .,\
                icons/,\
-               plugin.xml
+               plugin.xml,\
+               OSGi-INF/
