--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/sap/web.xml
@@ -296,7 +296,7 @@
 		<web-resource-collection>
 			<web-resource-name>IDE Services</web-resource-name>
 			<url-pattern>/services/workspace</url-pattern>
-			<url-pattern>/services/ui/index.html#/workspace</url-pattern>
+			<url-pattern>/services/web/registry/index.html#/workspace</url-pattern>
 			<url-pattern>/services/js-src/*</url-pattern>
 			<url-pattern>/services/generate-data-structure</url-pattern>
 			<url-pattern>/services/generate-scripting-service</url-pattern>
@@ -352,7 +352,7 @@
 			<url-pattern>/services/groovy-secured/*</url-pattern>
 			<url-pattern>/services/wiki-secured/*</url-pattern>
 			<url-pattern>/services/web/wiki-secured/*</url-pattern>
-			<url-pattern>/services/ui/index.html</url-pattern>
+			<url-pattern>/services/web/registry/index.html</url-pattern>
 			<url-pattern>/services/js-sandbox/*</url-pattern>
 			<url-pattern>/services/groovy-sandbox/*</url-pattern>
 			<url-pattern>/services/web-sandbox/*</url-pattern>
@@ -422,7 +422,7 @@
 		<web-resource-collection>
 			<web-resource-name>Anonymous Service</web-resource-name>
 			<url-pattern>/services/anonymous/*</url-pattern>
-			<url-pattern>/services/ui/anonymous.html/*</url-pattern>
+			<url-pattern>/services/web/registry/anonymous.html/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Anonymous</role-name>
