configurable local repository https://bugs.eclipse.org/bugs/show_bug.cgi?id=505696

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/trial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/trial/web.xml
@@ -116,6 +116,16 @@
 			<param-value>local</param-value>
 		</init-param>
 		
+		<init-param>
+			<param-name>localRepositoryRootFolder</param-name>
+			<param-value>.</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>localRepositoryRootFolderIsAbsolute</param-name>
+			<param-value>false</param-value>
+		</init-param>
+		
 		<!-- Mail Service Built-in --> 
 		<init-param>
 			<param-name>mailSender</param-name>
