--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/pom.xml
@@ -77,6 +77,7 @@
 		<module>org.eclipse.dirigible.runtime.init</module>
 		<module>org.eclipse.dirigible.runtime.scheduler</module>
 		<module>org.eclipse.dirigible.runtime.chrome.debugger</module>
+        <module>org.eclipse.dirigible.runtime.cmis</module>
 	</modules>
 
 </project>
