CMIS simple implementation https://bugs.eclipse.org/bugs/show_bug.cgi?id=503055

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/configuration/config.ini
@@ -145,6 +145,7 @@ osgi.bundles=com.google.gson@start,\
   org.eclipse.dirigible.runtime.web@start,\
   org.eclipse.dirigible.runtime.scheduler@start,\
   org.eclipse.dirigible.runtime.init@start,\
+  org.eclipse.dirigible.runtime.cmis@start,\
   org.quartz@start,\
   org.mozilla.javascript@start,\
   org.json@start,\
