--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/saptrial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/saptrial/web.xml
@@ -83,6 +83,30 @@
 			<param-value>java:comp/env/mail/SAPInternalNWCloudSession</param-value>
 		</init-param>
 		
+		<!-- JNDI key for the CMIS Service -->
+		<init-param>
+			<param-name>jndiCmisService</param-name>
+			<param-value>java:comp/env/EcmService</param-value>
+		</init-param>
+		
+		<!-- JNDI key for the CMIS Service - Authentication Method (key, destination) -->
+		<init-param>
+			<param-name>jndiCmisServiceAuth</param-name>
+			<param-value>key</param-value>
+		</init-param>
+		
+		<!-- JNDI key for the CMIS Service - Name -->
+		<init-param>
+			<param-name>jndiCmisServiceName</param-name>
+			<param-value>cmis:dirigible</param-value>
+		</init-param>
+		
+		<!-- JNDI key for the CMIS Service - Key -->
+		<init-param>
+			<param-name>jndiCmisServiceKey</param-name>
+			<param-value>cmis:dirigible:key</param-value>
+		</init-param>
+		
 		<!-- Auto Commit property for JDBC connection --> 
 		<init-param>
 			<param-name>jdbcAutoCommit</param-name>
