--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/saptrial/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/web/saptrial/web.xml
@@ -107,6 +107,12 @@
 			<param-value>cmis:dirigible:key</param-value>
 		</init-param>
 		
+		<!-- JNDI key for the Password Service -->
+		<init-param>
+			<param-name>jndiPasswordStorage</param-name>
+			<param-value>java:comp/env/PasswordStorage</param-value>
+		</init-param>
+		
 		<!-- Auto Commit property for JDBC connection --> 
 		<init-param>
 			<param-name>jdbcAutoCommit</param-name>
@@ -276,5 +282,14 @@
   	    <res-type>javax.mail.Session</res-type>
   	</resource-ref>
 
+	<resource-ref>
+   		<res-ref-name>EcmService</res-ref-name>
+   		<res-type>com.sap.ecm.api.EcmService</res-type>
+	</resource-ref>
+
+	<resource-ref>
+		<res-ref-name>PasswordStorage</res-ref-name>
+		<res-type>com.sap.cloud.security.password.PasswordStorage</res-type>
+	</resource-ref>
 	
 </web-app>
